2015-06-07 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx:
	  Add section on the use of --allow-unsafe-reads on Z80-based systems.

2015-06-06 Maarten Brock <sourceforge.brock AT dse.nl>

	* .version,
	* doc/INSTALL.txt,
	* doc/sdccman.lyx: version 3.5.0 rc1
	* sdcc.spec: version 3.5.0
	* device/lib/pic14/libsdcc/idata.c: cosmetics
	* support/regression/tests/bug-2274.c: prevented double testing by rename
	* support/regression/tests/gcc-torture-execute-stdarg-5.c: no ASSERT(0)

2015-06-05 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx,
	  src/SDCCglobl.h,
	  src/SDCClospre.cc,
	  src/SDCCmain.c:
	  Use more generic name for option for unsafe reads.

2015-05-23 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCCast.c:
	* src/SDCCglue.c:
	  Support initialization of char array in form 'char arr[] = {"abc"};'.
	* support/regression/tests/bug-2059.c:
	  Add a new test case.

2015-05-21 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCCsymt.c:
	  Remove useless code.
	* support/regression/tests/bug-2384.c:
	  Add a new test case.

2015-05-19 Ben Shi <powerstudio1st AT 163 DOT com>

	* support/regression/tests/bug-1918.c:
	  Add a new test case.

2015-05-17 Maarten Brock <sourceforge.brock AT dse.nl>

	* doc/clean.mk: remove *.eps
	* doc/Makefile.in: use dvipdfm instead of pdflatex to enable svg graphics
	* configure.in,
	* configure: require latex and dvipdfm for building doc

2015-05-17 Ben Shi <powerstudio1st AT 163 DOT com>

	* sdas/linksrc/lklex.c:
	  Check illegal object files.

2015-05-15 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCC.y:
	  Fix a potential bug in simplification of nested '*' and '&' in AST.

2015-05-14 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCC.y:
	  simplify nested '&' and '*' in AST.
	* support/regression/tests/bug-2381.c:
	  Add a new test case.

2015-05-13 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCCerr.c:
	* src/SDCCerr.h:
	* src/SDCCsymt.c:
	* src/SDCCsymt.h: