@@ -161,7 +161,6 @@ SDCC 3.5.0-rc1
 \begin_inset Newline newline
 \end_inset
 
-
 \size footnotesize
 $Date::             $ 
 \begin_inset Newline newline
